--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
                 var $map = $("#googleMap"),
                         menu = new Gmap3Menu($map),
-                        routePoints = [];
+                        routePoints = [],
+                        routePointsWI = [];
 
                 function drawRoute(twoPoints) {
                     console.log('draw route');
@@ -253,9 +254,12 @@
                                         },
                                         callback: function(results) {
                                             //console.log(results);
-                                            if (!results)
-                                                return;
+                                            if (!results) {
+                                                alert('无法识别该地点，请使用其它地点！');
+                                                return false;
+                                            }
                                             elm.autocomplete("display", results, false);
+                                            return;
                                         }
                                     }
                                 });
@@ -276,18 +280,18 @@
 //                                    console.log(cid);
 //                                    console.log(tmpPoint);
                                     updateRoute(cid, tmpPoint);
+                                },
+                                unselect: function() {
+                                    // TODO: we convert the value into point and save it to routePoints
+                                    
                                 }
-                            }
+                            },
+                            delay: 500
                         }).focus();
                     }
                 }
 
                 function removePath() {
-//                    $map.gmap3({
-//                        action: 'clear',
-//                        name: 'directionsrenderer'
-//                        // tag: 'path'  // works too with tag instead of name
-//                    });
                     $map.gmap3({
                         clear: {
                             name: ["directionsrenderer"]
@@ -295,13 +299,20 @@
                     });
                 }
                 function updateRoute(cid, thePoint) {
+                    //console.log(cid);
                     var tmp = new google.maps.LatLng(thePoint.lat, thePoint.lng);
-                    if (cid == 'start')
-                        routePoints[0] = tmp;
-                    else if (cid == 'end') {
-                        routePoints.push(tmp);
-                    } else
-                        routePoints[parseInt(cid) + 1] = tmp;
+                    routePointsWI[cid] = tmp;
+                    // update routePoints based on routePointsWI
+                    console.log('compare');
+                    console.log(routePointsWI);
+                    for(i in routePointsWI) {
+                        if(i == 'start')
+                            routePoints[0] = routePointsWI['start'];
+                        else if(i == 'end')
+                            routePoints[Object.size(routePointsWI)-1] = routePointsWI['end'];
+                        else
+                            routePoints[parseInt(i)+1] = routePointsWI[parseInt(i)];
+                    }
                     console.log(routePoints);
                 }
 
@@ -360,43 +371,6 @@
                     console.log(routePoints);
                     routePoints.splice(idx, 0, point);
                     console.log(routePoints);
-                }
-
-                // get distance between two points
-                function getDistanceBP(org, dest) {
-                    $("test").gmap3({
-                        getdistance: {
-                            options: {
-                                origins: [org],
-                                destinations: [dest],
-                                travelMode: google.maps.TravelMode.DRIVING
-                            },
-                            callback: function(results, status) {
-                                var html = "";
-                                if (results) {
-                                    for (var i = 0; i < results.rows.length; i++) {
-                                        var elements = results.rows[i].elements;
-                                        for (var j = 0; j < elements.length; j++) {
-                                            switch (elements[j].status) {
-                                                case "OK":
-                                                    html += elements[j].distance.text + " (" + elements[j].duration.text + ")<br />";
-                                                    break;
-                                                case "NOT_FOUND":
-                                                    html += "The origin and/or destination of this pairing could not be geocoded<br />";
-                                                    break;
-                                                case "ZERO_RESULTS":
-                                                    html += "No route could be found between the origin and destination.<br />";
-                                                    break;
-                                            }
-                                        }
-                                    }
-                                } else {
-                                    html = "error";
-                                }
-                                $("#test").html(html);
-                            }
-                        }
-                    });
                 }
 
                 Object.size = function(obj) {
