add more features

--- a/bdmap.html
+++ b/bdmap.html
@@ -59,6 +59,23 @@
             .input-icon:hover{cursor: pointer}
             .message {visibility:hidden;margin-bottom: 10px;height:50px;}
             .alert{padding-bottom:10px;padding-top:10px;}
+            #onway0+span {
+                right: 28px;
+            }
+            #showOnwayList {
+                background-color: #ffffff;
+                border-radius: 6px;
+                color: #b2bcc5;
+                font-size: 20px;
+                line-height: 37px;
+                padding: 0 12px 0 0;
+                position: absolute;
+                right: 2px;
+                top: 2px;
+                vertical-align: middle;
+            }
+            #waypointList ul{list-style-type: none}
+            #waypointList ul li div{margin-bottom: 0px;}
         </style>
 
         <script type="text/javascript">
