--- a/bdmap.html
+++ b/bdmap.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
         <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
         <script type="text/javascript" src="http://api.map.baidu.com/library/MarkerTool/1.2/src/MarkerTool_min.js"></script>
-
+        
         <!-- Loading Bootstrap -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -54,7 +54,7 @@
             .onway {padding-right: 0px;}
             .address {}
 
-            #waypointList {position: absolute;z-index: 99999;width:300px;}
+            #waypointList {position: absolute;z-index: 9998;width:300px;}
             #waypointList ul {margin-left: 0px;padding-left: 0px;}
             .input-icon:hover{cursor: pointer}
             .message {visibility:hidden;margin-bottom: 10px;height:50px;}
@@ -77,7 +77,8 @@
             #waypointList ul{list-style-type: none}
             #waypointList ul li div{margin-bottom: 0px;}
             #noteboxform {display:none;}
-        </style>
+            .tangram-suggestion-main {z-index:9999}
+         </style>
 
         <script type="text/javascript">
             
